<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7F3D4">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleForUnderEighteen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="52dp"
                android:fontFamily="@font/rubik"
                android:text="@string/under_18"
                android:textColor="#006600"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/infoUnderEighteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="132dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="@font/rubik"
                android:text="@string/under18text"
                android:textColor="#000000"
                android:textSize="20sp"/>

            <ImageView
                android:id="@+id/children"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_below="@id/infoUnderEighteen"
                android:contentDescription="@string/children"
                app:srcCompat="@drawable/chidren" />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>